--- a/newcss/newcss.css
+++ b/newcss/newcss.css
@@ -42,6 +42,8 @@
 }
 .article-panel h2{
     margin-bottom: 0;
+    padding: 0;
+    text-indent: 2em;
 }
 .article-panel ul li {
     display: block;
